--- a/main.css
+++ b/main.css
@@ -15,6 +15,7 @@
 @import url('https://mwittrien.github.io/BetterDiscordAddons/Themes/BasicBackground/BasicBackground.css');
 @import url('https://discordstyles.github.io/RadialStatus/base.css');
 @import url('https://discordstyles.github.io/RadialStatus/base.css');
+@import url('https://github.com/KhoaiMai/Factorio-discord-theme/blob/main/Base.css');
 
 :root {
     --background: url('https://i.imgur.com/vizHYNM.jpg');
