--- a/main.css
+++ b/main.css
@@ -16,10 +16,14 @@
 @import url('https://discordstyles.github.io/RadialStatus/base.css');
 @import url('https://discordstyles.github.io/RadialStatus/base.css');
 @import url('https://github.com/KhoaiMai/Factorio-discord-theme/blob/main/Base.css');
+@import url('https://fonts.googleapis.com/css2?family=Karla:wght@400;500;600;700&display=swap');
+@import url('https://mwittrien.github.io/BetterDiscordAddons/Themes/BlurpleRecolor/BlurpleRecolor.css');
+@import url('https://discord-custom-covers.github.io/usrbg/dist/usrbg.css');
+
 
 :root {
-    --background: url('https://i.imgur.com/vizHYNM.jpg');
     --home-image: url('https://i.imgur.com/fiR8JLP.png');
+    --background: url('https://i.imgur.com/vizHYNM.jpg');
     --backgroundsize: contain;
     --backgroundblur: 2px;
     --popout: transparent;
